Fix display overflow
Rounded the `displayContent` to 8 decimals to prevent the display from overflowing.

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main {
     margin: 20px;
     height: 30px;
     line-height: 30px;
-    padding: 10px;
+    padding: 10px 5px;
 }
 
 .button-container {
